--- a/CONTACTS.HTML
+++ b/CONTACTS.HTML
@@ -7,15 +7,19 @@
     <style>
         .FOR {
             font-weight: bold;
-            color: #070707;
+            color: hwb(312 2% 4%);
         }
 
         .body {
         
             background-image: url("B.jpg");
-            background-size: 400px;
+            background-size: 50%;
             background-repeat: no-repeat;
 
+        }
+
+        li {
+            color: aqua;
         }
     </style>
 </head>
