--- a/JOSHUA FASHIONS.HTML
+++ b/JOSHUA FASHIONS.HTML
@@ -8,10 +8,9 @@
     <!-- CSS format of inserting sizes of images,borders, and margin, then color of words and font of words -->
     <style>
         .img {
-         width: 200px; 
-         border-radius: 100px; 
-         float: none;
-         margin-right: auto; 
+            background-image: url("H.jpg");
+            background-size: 50%;
+            background-repeat: repeat;
         }
 
         .title {
@@ -26,13 +25,16 @@
         .background {
             color: #718f8fcd;
         }
+
+        li {
+            color: aqua;
+        }
     </style>
-    <img style="fashions.jpg">
     <br>
 </head>
-<body>
+<body class="img">
     <p class="title"> WELCOME TO JOSHUA FASHIONS</p>
-    <p style="color:;"> Let people admire you</p>
+    <p style="color: purple;"> Let people admire you</p>
     <!--These codes below are showing un ordered lists-->
     <br>
     <ul>
@@ -43,10 +45,10 @@
     <!--Here we are going to add pictures in our website-->
     <br>
     <h3 class="X-MEN"> MEN'S SUITS </h3>
-    <img  src="suit 1.jpg" style="width: 100px;height: 150px;"> <img src="suit2.jpg" style="width:80px;height:150px;"> <img src="suit3.jpg" style="width:100px;height:150px;"> <img src="G.jpg" style="width:100px;height:150px;"> <img src="suit4.jpg" style="width:90px;height:150px;">
+    <img  src="suit 1.jpg" style="width: 10%;height: 10%;"> <img src="suit2.jpg" style="width:10%;height:10%;"> <img src="suit3.jpg" style="width:10%;height:10%;"> <img src="G.jpg" style="width:10%;height:10%;"> <img src="suit4.jpg" style="width:10%;height:10%;">
     <br>
     <h3 class="MEN">MEN'S SHIRTS</h3>
-     <img src="E.jpg" style="width:80px;height:150px;"> <img src="F.jpg" style="width:100px;height:150px;"> <img src="G.jpg" style="width:100px;height:150px;"> <img src="H.jpg" style="width:70px;height:150px;"> <img src="K.jpg" style="width:80px;height:150px;">
+     <img src="E.jpg" style="width:10%;height:10%;"> <img src="F.jpg" style="width:10%;height:10%;"> <img src="G.jpg" style="width:10%;height:10%;"> <img src="H.jpg" style="width:10%;height:10%;"> <img src="K.jpg" style="width:10%;height:10%;">
     <br>
     <a href="About JOSHUA FASHIONS.HTML">Next Page</a>
 </body>
