--- a/About JOSHUA FASHIONS.HTML
+++ b/About JOSHUA FASHIONS.HTML
@@ -11,9 +11,8 @@ whole page-->
         .Us {
 
             background-image: url("A.jpg");
-            background-size: 400px;
+            background-size: 50%;
             background-repeat: repeat;
-
         }
 
         .Joshua {
