--- a/About JOSHUA FASHIONS.HTML
+++ b/About JOSHUA FASHIONS.HTML
@@ -42,6 +42,9 @@ whole page-->
 </head>
 <body class="Us">
    <p class="Joshua"> About Joshua fashions.</p>
+   <a href="JOSHUA FASHIONS.HTML">Click to go back</a>
+   <a href="CONTACTS.HTML">Click to go on the next page.>>>.</a>
+
     <p>
         Joshau Fashions is a cloth making company, that has both a factory and an outlet shop.
     It was started on 6th-feb-2023 by a man called called Joshua Tihabwangye and his former Tr of fashion and design, Mureeba Frank.
