--- a/CONTACTS.HTML
+++ b/CONTACTS.HTML
@@ -26,6 +26,7 @@
 <body class="body">
     
     <p class="FOR">For any inquirely you can contact us on our platforms</p>
+    <a href="About JOSHUA FASHIONS.HTML">Click here to go back</a>
 
     <ul>
     <li>email address:    tihabwangyej@gmail.com</li>
