--- a/JOSHUA FASHIONS.HTML
+++ b/JOSHUA FASHIONS.HTML
@@ -35,6 +35,7 @@
 <body class="img">
     <p class="title"> WELCOME TO JOSHUA FASHIONS</p>
     <p style="color: purple;"> Let people admire you</p>
+    <a href="About JOSHUA FASHIONS.HTML">Next Page</a>
     <!--These codes below are showing un ordered lists-->
     <br>
     <ul>
